--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "codemirror": "^5.63.0",
+    "hast-util-to-html": "^8.0.2",
+    "html-react-parser": "^1.3.0",
+    "html-to-react": "^1.4.7",
     "katex": "^0.13.18",
+    "lowlight": "^2.2.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "rehype-highlight": "^5.0.0",
     "rehype-katex": "^6.0.1",
     "rehype-raw": "^6.1.0",
-    "rehype-stringify": "^9.0.2",
     "remark-gfm": "^2.0.0",
     "remark-math": "^5.1.0",
+    "remark-rehype": "^9.1.0",
     "remark-slug": "^7.0.0",
-    "unified": "^10.1.0",
+    "remark-toc": "^8.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
